# jumptemplate

./: README.md  pyproject.toml
jumptemplate/: cli.py  settings.toml
jumptemplate/configs/: config.py
