[tool.poetry]
name = "jumptemplate"
version = "0.1.0"
description = ""
authors = ["hsdanield <hsdanield@gmail.com>"]
readme = "README.md"
include = ["jumpdb/settings.toml"]

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.1.11"
rich = "^13.3.1"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.9.0"

[tool.poetry.scripts]
jumptemplate = "jumptemplate.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
